# Up

./: .editorconfig  .gitignore  .gitlab-ci.yml  ANALYSIS_ARCH.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cargo-sources.json  flake.nix  gui.py  io.github.up.json  meson.build  setup.py  up-cli.py  up.py  update.py  upgrade.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/docs/: ANALYSIS_BUGS.md  ANALYSIS_FEATURES.md  CODEBASE_ANALYSIS.md  FLATPAK_CI_IMPLEMENTATION.md  FLATPAK_CI_README.md  FLATPAK_CI_SUMMARY.md  FLATPAK_CONFIGURATION_GUIDE.md  MASTER_PLAN.md  flatpak_ci_documentation.md
.github/docs/subagent_docs/: architecture_review.md  architecture_review_final.md  architecture_spec.md  async_trait_removal_review.md  async_trait_removal_spec.md  blocking_io_detection_review.md  blocking_io_detection_review_final.md  blocking_io_detection_spec.md  bug_fixes_b3_b10_review.md  bug_fixes_b3_b10_spec.md  bugs_risks_review.md  bugs_risks_review_final.md  bugs_risks_spec.md  build_ci_review.md  build_ci_spec.md  button_layout_nix_check_review.md  button_layout_nix_check_spec.md  cancel_update_review.md  cancel_update_review_final.md  cancel_update_spec.md  changelog_viewer_review.md  changelog_viewer_review_final.md  changelog_viewer_spec.md  check_for_updates_review.md  check_for_updates_review_final.md  check_for_updates_spec.md  cleanup_maintenance_review.md  cleanup_maintenance_spec.md  command_executor_gitlab_workflow_spec.md  command_executor_review.md  command_executor_review_final.md  command_executor_spec.md  curl_to_ureq_review.md  curl_to_ureq_review_final.md  curl_to_ureq_spec.md  determinate_nix_and_upgrade_detection_review.md  determinate_nix_and_upgrade_detection_spec.md  disk_space_check_review.md  disk_space_check_spec.md  disk_space_review.md  (+155 more)
.github/docs/temp/: nixos_vexos_variant_impl.md
.github/workflows/: ci.yml  flatpak-ci.yml  gitlab-mirror.yml  release.yml
daemon/: Cargo.toml
daemon/src/: allowlist.rs  audit.rs  auth.rs  cancel.rs  executor.rs  interface.rs  lifecycle.rs  main.rs
data/: io.github.up-check.service.in  io.github.up-check.timer  io.github.up.Daemon.conf  io.github.up.Daemon.service  io.github.up.desktop  io.github.up.desktop.in  io.github.up.gresource.xml  io.github.up.metainfo.xml  io.github.up.policy  style.css
data/backends.d/: apk.yaml  xbps.yaml
docs/: FLATPAK_CI_SUMMARY.md
examples/plugins/: eopkg.yaml  swupd.yaml
po/: LINGUAS  POTFILES.in  meson.build
releases/: 1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md  1.1.0.md  2.0.0.md  2.0.1.md  2.0.2.md  2.0.3.md  2.0.4.md  2.1.0.md  2.2.0.md
scripts/: build-flatpak.sh  preflight.sh  run-dev.sh  verify-flatpak.sh
src/: app.rs  battery.rs  changelog.rs  check.rs  config.rs  dbus_client.rs  disk.rs  executor.rs  history.rs  main.rs  orchestrator.rs  reboot.rs  runner.rs  runtime.rs  snapshot.rs  upgrade.rs
src/backends/: determinate_nix.rs  flatpak.rs  fwupd.rs  homebrew.rs  mod.rs  nix.rs  os_package_manager.rs
src/plugins/: backend.rs  descriptor.rs  discovery.rs  mod.rs  parser.rs  validate.rs
src/ui/: cache_block_dialog.rs  history_page.rs  log_panel.rs  mod.rs  reboot_dialog.rs  update_row.rs  upgrade_page.rs  window.rs
src/upgrade/: check.rs  detect.rs  execute.rs  mod.rs  version.rs
