[workspace]
members = [".", "daemon"]

[package]
name = "up"
version = "2.0.1"
edition = "2021"
description = "A modern system update & upgrade app for Linux"
license = "GPL-3.0-or-later"
authors = ["Up Contributors"]
repository = "https://github.com/VictoryTek/Up"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "process", "fs", "sync", "time"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
regex = "1"
log = "0.4"
env_logger = "0.11"
which = "7"
thiserror = "2"
ureq = "3"
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true

[build-dependencies]
glib-build-tools = "0.20"
