[package]
name = "up-daemon"
version = "2.1.0"
edition = "2021"
description = "Privileged backend service for Up system updater"
license = "GPL-3.0-or-later"
authors = ["Up Contributors"]
repository = "https://github.com/VictoryTek/Up"

[[bin]]
name = "up-daemon"
path = "src/main.rs"

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "signal", "time", "sync", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
